<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_exchange_rate_scene"
    tools:context=".ExchangeRate">

    <EditText
        android:id="@+id/inp_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inp_RMB"
        android:inputType="number"
        android:minHeight="80dp"
        android:textAllCaps="true"
        android:onClick="myclick" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:onClick="myclick"
        android:text="@string/rs"
        android:textSize="60sp"/>

    <Button
        android:id="@+id/button_dollar_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange_DOLLAR"
        android:textAllCaps="true"
        android:onClick="myclick"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/button_won_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/exchange_WON"
        android:onClick="myclick"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/button_yen_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/exchange_YEN"
        android:onClick="myclick"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/button_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/config"
        android:onClick="openConfig"
        android:textAllCaps="true"/>
</LinearLayout>