<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".change_to">

    <EditText
        android:id="@+id/new_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:onClick="save"
        android:hint="@string/exchange_DOLLAR" />

    <EditText
        android:id="@+id/new_yen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:textSize="24sp"
        android:hint="@string/exchange_YEN" />

    <EditText
        android:id="@+id/new_won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:textSize="24sp"
        android:hint="@string/exchange_WON" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        android:onClick="save"
        android:text="@string/save" />

</LinearLayout>