<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CourtCounter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/team_a_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/score_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center"
                android:text="@string/score_a"
                android:textSize="60sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="a_click"
                android:text="@string/score_a_1" />

            <Button
                android:id="@+id/button_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="a_click"
                android:text="@string/score_a_2" />

            <Button
                android:id="@+id/button_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="a_click"
                android:text="@string/score_b_3" />
            </LinearLayout>

        <TextView
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:background="@color/material_dynamic_neutral_variant60"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/team_b_label"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/score_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center"
                android:text="@string/score_b"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="b_click"
                android:text="@string/score_a_1" />

            <Button
                android:id="@+id/button_b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="b_click"

                android:text="@string/score_b_2" />

            <Button
                android:id="@+id/button_b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="b_click"
                android:text="@string/score_b_3" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="click"
        android:text="@string/reset" />

</LinearLayout>